# SSAxgeo

./: .gitignore  .gitmodules  GetCanonicalClusters.py  MathToolBox.py  PDBx.py  README.bak  README.md  RunSSAx.py  SingularityFile  dssp.py  prepare_BCX_df.py  pyproject.toml  setup.py
canonical/: alpha_can.csv  alpha_can.p  lalpha_can.csv  lthree_can.csv  pi_can.csv  pi_can.p  pp2_can.csv  pp2_can.p  three_can.csv  three_can.p
notebooks/: SetCanonicalRegions.ipynb
scripts/: GetCanonicalClusters.py  computePDBxgeo  computePDBxgeo.py  getSampleOfClstrPDB  prepare_BCX_df.py  ssaxgeo  ssaxgeo_clusterResidues  ssaxgeo_computePDBxgeo  ssaxgeo_getSampleOfClstrPDB
ssaxgeo/: MathToolBox.py  PDBfileToolBox.py  PDBx.py  dssp.py
